hphp/hack/test/typecheck/akempty/akempty_promotion_1.php.like_types.exp
File "akempty_promotion_1.php", line 10, characters 5-6:
Invalid argument (Typing[4110])
File "akempty_promotion_1.php", line 13, characters 12-21:
Expected ~varray<int> because it is an unenforceable type
File "akempty_promotion_1.php", line 8, characters 3-6:
But got varray<(string | nothing)> because a value is appended to it
